# dl-experiments

./: .gitignore  checkpoint.py  main.py  pyproject.toml  train.py  utils.py  visualization.py
cifar/: main.py  models.py  train.py
config/: main.yaml
image_classification/: checkpoint.py  commons.py  data.py  main.py  models.py  train.py  visualization.py
image_classification/config/: main.yaml  main.yml
image_classification/config/optimizer/: adamw-hi.yaml
