[tool.poetry]
name = "dl-experiments"
version = "0.1.0"
description = ""
authors = ["Daniele Tarek Iaisy <iaisy.danieletarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
